--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
                 <!-- ส่วนจำนวนคำถาม -->
                 <div id="questionCount" class="text-muted mt-4"></div> <!-- ข้อความแสดงจำนวนคำถาม -->
+                <div id="questionCount" class="text-muted mt-4">รายงานปัญหาหรือเสนอแนะ  <a href="https://forms.gle/9JJQshako8X5R7w37" target="_blank">คลิ๊กที่นี่</a></div>
 
             </div>
         </div>
