--- a/index.html
+++ b/index.html
@@ -1,80 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechSolve</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/logo.png" type="image/png">
-    <!-- Select2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>TechSolve</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,400;1,200&display=swap"
+      rel="stylesheet">
+  <style>
+    .hero {
+      background-color: #f8f9fa;
+      padding: 100px 0;
+      text-align: center;
+    }
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,400;1,200&display=swap"
-        rel="stylesheet">
+    .hero h1 {
+      font-size: 3rem;
+    }
+  </style>
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 
-    <!-- Navbar ที่มีโลโก้และชื่อเว็บไซต์ พร้อมปุ่ม About -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-        <div class="container d-flex align-items-center">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="assets/logo.png" alt="Logo" width="40" height="40"
-                    class="d-inline-block align-text-center logo">
-                <span class="ms-2">TechSolve</span>
-            </a>
-            <button class="btn btn-about ms-auto " onclick="showAbout()">About</button>
-        </div>
-    </nav>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="assets/gear.png" alt="Logo" width="40" height="40"
+          class="d-inline-block align-text-center logo">
+      <span class="ms-2">TechSolve</span>
+  </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-primary" onclick="showAbout()">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-8 text-center">
-                <h1 class="mb-4">ระบบช่วยช่างซ่อม Vending Machine</h1>
+  <!-- Hero Section -->
+  <section class="hero bg-ligh bg-gradient">
+    <div class="container">
+      <h1>Welcome to TechSolve</h1>
+      <p class="lead">ซ่อมไม่ได้ เราช่วยคุณได้เสมอ
+      </p>
+      <button onclick="showMore()" class="btn btn-primary btn-lg">Learn More</button>
+    </div>
+  </section>
 
-                <!-- Input Section -->
-                <div class="input-section mb-4">
-                    <select id="errorCodeDropdown"
-                        class="form-select form-select-lg mb-3 w-50 mx-auto bg-dark text-dark border-light"
-                        aria-label="Error Code Dropdown">
-                        <option class="text-dark" value="" disabled selected>กรุณาเลือก Error Code</option>
-                    </select>
-                    <button class="btn btn-primary btn-lg" onclick="searchErrorCode()">ค้นหา</button>
-                </div>
-
-                <!-- Card for displaying content -->
-                <div id="contentSection" class="card p-4 shadow-lg d-none">
-                    <div id="descriptionSection" class="mb-1"></div>
-                    <div id="questionSection" class="mb-1"></div>
-                    <div id="answerSection"
-                        class="mb-1 d-flex justify-content-around flex-wrap text-success custom-green "></div>
-                    <div id="imageSection" class="mb-1"></div>
-                </div>
-
-                <!-- ส่วนจำนวนคำถาม -->
-                <div id="questionCount" class="text-muted mt-4"></div> <!-- ข้อความแสดงจำนวนคำถาม -->
-                <div id="questionCount" class="text-muted mt-4">รายงานปัญหาหรือเสนอแนะ  <a href="https://forms.gle/9JJQshako8X5R7w37" target="_blank">คลิ๊กที่นี่</a></div>
-
+  <!-- Features Section -->
+  <section class="py-5">
+    <div class="container">
+      <h4 class="text-white">โปรดเลือกเมนูที่ต้องการ</h4>
+      <div class="row">
+        <div class="col-md-4">
+          <a href="tcn.html" class="text-decoration-none text-dark">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-body text-center">
+                <h5 class="card-title">Vending Machine Model 11L</h5>
+                <p class="card-text ">ระบบช่วยซ่อม</p>
+                <img src="assets/logo.png" alt="Logo" width="150" height="150"
+                  class="d-inline-block align-text-center logo">
+              </div>
             </div>
+          </a>
         </div>
+        <div class="col-md-4">
+          <a href="index.html" class="text-decoration-none text-dark">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-body text-center">
+                <h5 class="card-title">Vending Machine Model FVM</h5>
+                <p class="card-text">ระบบช่วยซ่อม</p>
+                <img src="assets/logo.png" alt="Logo" width="150" height="150"
+                  class="d-inline-block align-text-center logo">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="index.html" class="text-decoration-none text-dark">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-body text-center">
+                <h5 class="card-title">Other Feature</h5>
+                <p class="card-text">This is a feature description.</p>
+                <img src="assets/gear.png" alt="Logo" width="150" height="150"
+                  class="d-inline-block align-text-center logo">
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <a href="tcn.html" class="text-decoration-none text-dark">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-body text-center">
+                <h5 class="card-title">Other Feature</h5>
+                <p class="card-text">This is a feature description.</p>
+                <img src="assets/gear.png" alt="Logo" width="150" height="150"
+                  class="d-inline-block align-text-center logo">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="index.html" class="text-decoration-none text-dark">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-body text-center">
+                <h5 class="card-title">Other Feature</h5>
+                <p class="card-text">This is a feature description.</p>
+                <img src="assets/gear.png" alt="Logo" width="150" height="150"
+                  class="d-inline-block align-text-center logo">
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="https://forms.gle/9JJQshako8X5R7w37" class="text-decoration-none text-dark">
+            <div class="card mb-4 shadow-sm">
+              <div class="card-body text-center">
+                <h5 class="card-title">แจ้งปัญหาเพิ่มเติม</h5>
+                <p class="card-text">ถามข้อมูลและแจ้งปัญหา</p>
+                <img src="assets/qa.png" alt="Logo" width="150" height="150"
+                  class="d-inline-block align-text-center logo">
+              </div>
+            </div>
+          </a>
+        </div>
 
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      </div>
+    </div>
+  </section>
 
-    <!-- Select2 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!-- Custom Script -->
-    <script src="script.js"></script>
+  <!-- Footer -->
+  <footer class="footer mt-auto py- bg-light">
+    <div class="container text-center">
+      <p>&copy; 2024 TechSolve. All rights reserved By Tony.</p>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
