--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="index.html" class="text-decoration-none text-dark">
+          <a href="fuji.html" class="text-decoration-none text-dark">
             <div class="card mb-4 shadow-sm">
               <div class="card-body text-center">
                 <h5 class="card-title">Vending Machine Model FVM</h5>
@@ -94,7 +94,7 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="index.html" class="text-decoration-none text-dark">
+          <a href="soon.html" class="text-decoration-none text-dark">
             <div class="card mb-4 shadow-sm">
               <div class="card-body text-center">
                 <h5 class="card-title">Other Feature</h5>
@@ -111,7 +111,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <a href="tcn.html" class="text-decoration-none text-dark">
+          <a href="soon.html" class="text-decoration-none text-dark">
             <div class="card mb-4 shadow-sm">
               <div class="card-body text-center">
                 <h5 class="card-title">Other Feature</h5>
@@ -123,7 +123,7 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="index.html" class="text-decoration-none text-dark">
+          <a href="soon.html" class="text-decoration-none text-dark">
             <div class="card mb-4 shadow-sm">
               <div class="card-body text-center">
                 <h5 class="card-title">Other Feature</h5>
