--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </a>
         </div>
         <div class="col-md-4">
-          <a href="soon.html" class="text-decoration-none text-dark">
+          <a href="fuji.html" class="text-decoration-none text-dark">
             <div class="card mb-4 shadow-sm">
               <div class="card-body text-center">
                 <h5 class="card-title">Other Feature</h5>
