--- a/login.html
+++ b/login.html
@@ -1,104 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - TechSolve</title>
+    <title>Login - Local Hash Password</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,400;1,200&display=swap"
+        rel="stylesheet">
     <style>
-        body, html {
+        body {
+            font-family: "Bai Jamjuree", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            background-color: #1e1e2f;
+        }
+        html {
             height: 100%;
             background-color: #f8f9fa;
         }
+
         .login-container {
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
         }
+
         .login-card {
             padding: 2rem;
             border-radius: 0.5rem;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             background-color: #ffffff;
         }
+
         .logo {
             width: 100px;
             margin-bottom: 1rem;
         }
     </style>
 </head>
-<body>
+
+<body class="d-flex flex-column h-100">
 
     <div class="container login-container">
         <div class="card login-card card-xl">
             <div class="text-center">
-                <img src="assets/logo.png" alt="Logo" class="logo">
                 <h2 class="mb-4">Login</h2>
+                <img src="assets/gear.png" alt="Logo" width="300" height="300" />
             </div>
             <form id="loginForm">
-                <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" placeholder="Enter username" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
+                <div class="mb-3 text-center">
+                    <label for="password" class="form-label">กรุณากรอกรหัสผ่าน เพื่อเข้าใช้งาน</label>
                     <input type="password" class="form-control" id="password" placeholder="Enter password" required>
                 </div>
                 <div id="errorMessage" class="text-danger mb-3 d-none"></div>
                 <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
+            <a class="mt-5 text-center text-secondary">ติดต่อผู้ดูและระบบเพื่อรับรหัสผ่าน</a>
+            <a href="index.html" class="mt-3 text-center text-dark">กลับสู่หน้า home</a>
         </div>
     </div>
 
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Custom JS -->
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function(e) {
-            e.preventDefault(); // ป้องกันการรีเฟรชหน้าเว็บ
+        const storedHashedPassword = '2cf24dba5fb0a30e26e83b2ac5b9e29e1b161e5c1fa7425e73043362938b9824'; // รหัสผ่านที่ถูกแฮชด้วย SHA-256 (hello)
 
-            const username = document.getElementById('username').value.trim();
+
+        document.getElementById('loginForm').addEventListener('submit', async function (e) {
+            e.preventDefault();
+
             const password = document.getElementById('password').value.trim();
             const errorMessage = document.getElementById('errorMessage');
 
-            // ตรวจสอบว่าข้อมูลไม่ว่างเปล่า
-            if (username === '' || password === '') {
-                errorMessage.textContent = 'กรุณากรอกชื่อผู้ใช้และรหัสผ่านให้ครบถ้วน';
+            if (password === '') {
+                errorMessage.textContent = 'กรุณากรอกรหัสผ่าน';
                 errorMessage.classList.remove('d-none');
                 return;
             }
 
-            // ส่งข้อมูลเข้าสู่ระบบผ่าน API                  AKfycbw1uG7-Lxqu1qazFZaxEqT9y0eVSpaDYAUnv8tjjiewEhXi496Xzv6wMlz3a7s17oRqYA
-            fetch('https://script.google.com/macros/s/AKfycbycROJokDWQ5i6VKn1F2oHj6UJHgbesH6wB4bmFGLecyeezjxe2s39xXJMGwiEU-OuJtg/exec', { // แทนที่ YOUR_SCRIPT_ID ด้วย Script ID ของคุณ
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ username, password })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.status === 'success') {
-                    // บันทึก token ลงใน localStorage
-                    localStorage.setItem('sessionToken', data.token);
-                    // เปลี่ยนเส้นทางไปยังหน้า index.html
-                    window.location.href = 'index.html';
-                } else {
-                    // แสดงข้อความผิดพลาด
-                    errorMessage.textContent = data.message || 'เกิดข้อผิดพลาดในการเข้าสู่ระบบ';
-                    errorMessage.classList.remove('d-none');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                errorMessage.textContent = 'ไม่สามารถเชื่อมต่อกับเซิร์ฟเวอร์ได้';
+            // แฮชรหัสผ่านที่ป้อน
+            const hashedPassword = await hashPassword(password);
+
+            // ตรวจสอบว่ารหัสผ่านที่ป้อนตรงกับรหัสที่แฮชไว้หรือไม่
+            if (hashedPassword === storedHashedPassword) {
+                alert('Login successful!');
+                localStorage.setItem('loggedIn', true); // เก็บสถานะล็อกอิน
+                window.location.href = 'index.html'; // เปลี่ยนเส้นทางไปยังหน้าอื่น
+            } else {
+                errorMessage.textContent = 'รหัสผ่านไม่ถูกต้อง';
                 errorMessage.classList.remove('d-none');
-            });
+            }
         });
+
+        async function hashPassword(password) {
+            const msgUint8 = new TextEncoder().encode(password);
+            const hashBuffer = await crypto.subtle.digest('SHA-256', msgUint8);
+            const hashArray = Array.from(new Uint8Array(hashBuffer));
+            return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+        }
     </script>
+    <!-- Footer -->
+    <footer class="footer mt-auto py- bg-light">
+        <div class="container text-center">
+            <p>&copy; 2024 TechSolve. All rights reserved By Tony.</p>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
