--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,400;1,200&display=swap"
-      rel="stylesheet">
+    rel="stylesheet">
   <style>
     .hero {
       background-color: #f8f9fa;
@@ -31,10 +31,18 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="assets/gear.png" alt="Logo" width="40" height="40"
-          class="d-inline-block align-text-center logo">
-      <span class="ms-2">TechSolve</span>
-  </a>
+      <img src="assets/gear.png" alt="Logo" width="40" height="40" class="d-inline-block align-text-center logo">
+      <div class="waviy2 ml-2">
+        <span style="--i:1">T</span>
+        <span style="--i:2">e</span>
+        <span style="--i:3">c</span>
+        <span style="--i:4">h</span>
+        <span style="--i:5">S</span>
+        <span style="--i:6">o</span>
+        <span style="--i:7">l</span>
+        <span style="--i:8">ve</span>
+       </div>
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -55,12 +63,22 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero bg-ligh bg-gradient">
+  <section class="hero bg-light bg-gradient">
     <div class="container">
-      <h1>Welcome to TechSolve</h1>
-      <p class="lead">ซ่อมไม่ได้ เราช่วยคุณได้เสมอ
-      </p>
-      <button onclick="showMore()" class="btn btn-primary btn-lg">Learn More</button>
+        <h- class="title">
+          <span class="title-word title-word-3 h1">Tech</span>
+          <span class="title-word title-word-4 h1">Solve</span>
+          </h2>
+      <p class="lead mt-4">ซ่อมไม่ได้ เราช่วยคุณได้เสมอ</p>
+      <div class="waviy">
+        <span style="--i:1">E</span>
+        <span style="--i:2">N</span>
+        <span style="--i:3">J</span>
+        <span style="--i:4">O</span>
+        <span style="--i:5">Y</span>
+     
+       </div>
+      <button onclick="showMore()" class="mt-5 btn btn-primary btn-lg">Learn More</button>
     </div>
   </section>
 
